--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name"        : "mmjy-data-generator",
-  "version"     : "0.2.0",
+  "version"     : "0.2.1-dev",
   "description" : "Utility for generating GeoJSON continent and country data for MarkMyJourney.",
   "license"     : "MIT",
   "author"      : "Mark van Seventer <mark@vseventer.com>",
   "repository"  : "vseventer/mmjy-data-generator",
   "config"      : {
     "cities"    : "http://download.geonames.org/export/dump/cities5000.zip",
+    "codes"     : "http://download.geonames.org/export/dump/admin1CodesASCII.txt",
     "countries" : {
       "api" : "http://api.geonames.org/searchJSON?q=&featureCode=PCL&featureCode=PCLD&featureCode=PCLF&featureCode=PCLI&featureCode=PCLIX&featureCode=PCLS&featureCode=TERR&formatted=true&maxRows=500&style=full&username=demo",
       "csv" : "http://download.geonames.org/export/dump/countryInfo.txt"
@@ -25,9 +26,10 @@
     "clean"     : "rimraf ./out ./src",
     "postclean" : "mkdir ./out",
 
-    "pull" : "parallelshell 'npm run pull:cities' 'npm run pull:continents' 'npm run pull:custom' 'npm run pull:countries' 'npm run pull:languages' 'npm run pull:shapes' 'npm run pull:timezones'",
+    "pull" : "parallelshell 'npm run pull:cities' 'npm run pull:codes' 'npm run pull:continents' 'npm run pull:custom' 'npm run pull:countries' 'npm run pull:languages' 'npm run pull:shapes' 'npm run pull:timezones'",
 
     "pull:cities"        : "curl -o src/cities.zip      --create-dirs $npm_package_config_cities",
+    "pull:codes"         : "curl -o src/codes.csv       --create-dirs $npm_package_config_codes",
     "pull:continents"    : "curl -o src/continents.json --create-dirs $npm_package_config_continents",
     "pull:countries"     : "parallelshell 'npm run pull:countries:api' 'npm run pull:countries:csv'",
     "pull:countries:api" : "curl -o src/countries.json  --create-dirs $npm_package_config_countries_api",
