Replace cities by places, improve algorithms, update copyright.

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,6 @@
 {
   "bitwise"   : true,
-  "camelcase" : false,
+  "camelcase" : true,
   "curly"     : true,
   "eqeqeq"    : true,
   "forin"     : true,
