--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name"        : "mmjy-data-generator",
-  "version"     : "0.2.2",
+  "version"     : "0.3.0",
   "description" : "Utility for generating GeoJSON continent and country data for MarkMyJourney.",
   "license"     : "MIT",
   "author"      : "Mark van Seventer <mark@vseventer.com>",
   "repository"  : "vseventer/mmjy-data-generator",
   "config"      : {
-    "cities"    : "http://download.geonames.org/export/dump/cities5000.zip",
     "codes"     : "http://download.geonames.org/export/dump/admin1CodesASCII.txt",
     "countries" : {
       "api" : "http://api.geonames.org/searchJSON?q=&featureCode=PCL&featureCode=PCLD&featureCode=PCLF&featureCode=PCLI&featureCode=PCLIX&featureCode=PCLS&featureCode=TERR&formatted=true&maxRows=500&style=full&username=demo",
@@ -14,6 +13,7 @@
     },
     "continents" : "http://api.geonames.org/searchJSON?q=&featureCode=CONT&formatted=true&style=full&username=demo",
     "languages"  : "http://download.geonames.org/export/dump/iso-languagecodes.txt",
+    "places"     : "http://download.geonames.org/export/dump/allCountries.zip",
     "shapes"     : "http://download.geonames.org/export/dump/shapes_simplified_low.zip",
     "timezones"  : "http://download.geonames.org/export/dump/timeZones.txt",
 
@@ -26,18 +26,18 @@
     "clean"     : "rimraf ./out ./src",
     "postclean" : "mkdir ./out",
 
-    "pull" : "parallelshell 'npm run pull:cities' 'npm run pull:codes' 'npm run pull:continents' 'npm run pull:custom' 'npm run pull:countries' 'npm run pull:languages' 'npm run pull:shapes' 'npm run pull:timezones'",
+    "pull" : "parallelshell 'npm run pull:codes' 'npm run pull:continents' 'npm run pull:custom' 'npm run pull:countries' 'npm run pull:languages' 'npm run pull:places' 'npm run pull:shapes' 'npm run pull:timezones'",
 
-    "pull:cities"        : "curl -o src/cities.zip      --create-dirs $npm_package_config_cities",
     "pull:codes"         : "curl -o src/codes.csv       --create-dirs $npm_package_config_codes",
     "pull:continents"    : "curl -o src/continents.json --create-dirs $npm_package_config_continents",
     "pull:countries"     : "parallelshell 'npm run pull:countries:api' 'npm run pull:countries:csv'",
     "pull:countries:api" : "curl -o src/countries.json  --create-dirs $npm_package_config_countries_api",
     "pull:countries:csv" : "curl -o src/countries.csv   --create-dirs $npm_package_config_countries_csv",
     "pull:languages"     : "curl -o src/languages.csv   --create-dirs $npm_package_config_languages",
+    "pull:places"        : "curl -o src/places.zip      --create-dirs $npm_package_config_places",
     "pull:shapes"        : "curl -o src/shapes.zip      --create-dirs $npm_package_config_shapes",
     "pull:timezones"     : "curl -o src/timezones.csv   --create-dirs $npm_package_config_timezones",
-    "postpull:cities"    : "unzip -p src/cities.zip > src/cities.csv",
+    "postpull:places"    : "unzip -p src/places.zip > src/places.csv",
     "postpull:shapes"    : "unzip -p src/shapes.zip > src/shapes.csv",
 
     "pull:custom": "parallelshell 'npm run pull:caribbean' 'npm run pull:central-america' 'npm run pull:middle-east'",
@@ -45,29 +45,31 @@
     "pull:central-america" : "curl -o src/central-america.json --create-dirs $npm_package_config_central_america",
     "pull:middle-east"     : "curl -o src/middle-east.json     --create-dirs $npm_package_config_middle_east",
 
-    "pregenerate" : "npm run pull",
-    "generate"    : "node .",
+    "pregenerate"  : "npm run clean",
+    "generate"     : "npm run pull",
+    "postgenerate" : "npm start",
 
-    "prestart" : "npm run clean",
-    "start"    : "npm run generate",
-
-    "test": "jshint --reporter=./node_modules/jshint-stylish *.js lib/"
+    "start"  : "node .",
+    "test"   : "jshint --reporter=./node_modules/jshint-stylish *.js lib/"
   },
   "dependencies": {
     "async"         : "1.5.x",
     "fast-csv"      : "1.0.x",
-    "lodash.find"   : "3.2.x",
-    "lodash.matchesproperty": "3.2.x",
-    "lodash.sortby" : "3.1.x",
+    "glob"          : "6.0.x",
+    "gray-matter"   : "2.0.x",
+    "lodash.find"   : "4.0.x",
+    "lodash.matchesproperty": "4.0.x",
+    "lodash.sortby" : "4.0.x",
     "moment"        : "2.11.x",
     "numeral"       : "1.5.x",
     "object-assign" : "4.0.x",
     "parallelshell" : "2.0.x",
     "rimraf"        : "2.5.x",
-    "slug"          : "0.9.x"
+    "slug"          : "0.9.x",
+    "toml"          : "2.3.x"
   },
   "devDependencies": {
-    "jshint"         : "2.8.x",
+    "jshint"         : "2.9.x",
     "jshint-stylish" : "2.1.x"
   },
   "engines" : { "node": ">=0.10" },
