--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"        : "mmjy-data-generator",
-  "version"     : "0.6.0",
+  "version"     : "0.7.0",
   "description" : "Utility for generating GeoJSON continent and country data for MarkMyJourney.",
   "license"     : "MIT",
   "author"      : "Mark van Seventer <mark@vseventer.com>",
@@ -26,11 +26,11 @@
     "clean"     : "rimraf ./out ./src",
     "postclean" : "mkdir ./out",
 
-    "pull" : "parallelshell 'npm run pull:codes' 'npm run pull:continents' 'npm run pull:custom' 'npm run pull:countries' 'npm run pull:languages' 'npm run pull:shapes' 'npm run pull:timezones'",
+    "pull" : "concurrently --raw 'npm run pull:codes' 'npm run pull:continents' 'npm run pull:custom' 'npm run pull:countries' 'npm run pull:languages' 'npm run pull:shapes' 'npm run pull:timezones'",
 
     "pull:codes"         : "curl -o src/codes.csv       --create-dirs $npm_package_config_codes",
     "pull:continents"    : "curl -o src/continents.json --create-dirs $npm_package_config_continents",
-    "pull:countries"     : "parallelshell 'npm run pull:countries:api' 'npm run pull:countries:csv'",
+    "pull:countries"     : "concurrently --raw 'npm run pull:countries:api' 'npm run pull:countries:csv'",
     "pull:countries:api" : "curl -o src/countries.json  --create-dirs $npm_package_config_countries_api",
     "pull:countries:csv" : "curl -o src/countries.csv   --create-dirs $npm_package_config_countries_csv",
     "pull:languages"     : "curl -o src/languages.csv   --create-dirs $npm_package_config_languages",
@@ -40,7 +40,7 @@
     "postpull:places"    : "unzip -p src/places.zip > src/places.csv",
     "postpull:shapes"    : "unzip -p src/shapes.zip > src/shapes.json",
 
-    "pull:custom": "parallelshell 'npm run pull:caribbean' 'npm run pull:central-america' 'npm run pull:middle-east'",
+    "pull:custom": "concurrently --raw 'npm run pull:caribbean' 'npm run pull:central-america' 'npm run pull:middle-east'",
     "pull:caribbean"       : "curl -o src/caribbean.json       --create-dirs $npm_package_config_caribbean",
     "pull:central-america" : "curl -o src/central-america.json --create-dirs $npm_package_config_central_america",
     "pull:middle-east"     : "curl -o src/middle-east.json     --create-dirs $npm_package_config_middle_east",
@@ -53,17 +53,17 @@
     "test"   : "jshint --reporter=./node_modules/jshint-stylish *.js lib/"
   },
   "dependencies": {
-    "async"         : "2.4.x",
+    "async"         : "2.5.x",
+    "concurrently"  : "3.5.x",
     "fast-csv"      : "2.4.x",
     "glob"          : "7.1.x",
-    "gray-matter"   : "2.1.x",
+    "gray-matter"   : "3.1.x",
     "lodash.find"   : "4.6.x",
     "lodash.matchesproperty": "4.7.x",
     "lodash.sortby" : "4.7.x",
-    "moment"        : "2.18.x",
+    "moment"        : "2.19.x",
     "numeral"       : "2.0.x",
     "object-assign" : "4.1.x",
-    "parallelshell" : "2.0.x",
     "rimraf"        : "2.6.x",
     "slug"          : "0.9.x",
     "toml"          : "2.3.x"
